PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-209_express_unaire_neg_invalide/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:13: error: expected ‘;’ before ‘!’ token
    4 |     return x!;
      |             ^
      |             ;

return code: 1
